# robotevo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
robotevo/: __init__.py
robotevo/EvoScriPy/: GUI.py  Instruction_Base.py  __init__.py  evo_mode.py  instructions.py  instructions_Te_MagS.py  protocol_steps.py  reagent.py  robot.py
robotevo/protocols/: __init__.py  registre_protocols.py  tests.py
robotevo/protocols/demos/demo_two_mixes/: demo_two_mixes.py
robotevo/protocols/demos/hello_world/: hello_world.py
robotevo/protocols/demos/tutorial_HL/: tutorial_HL.py
robotevo/protocols/demos/tutorial_HL_RoMa/: tutorial_HL_RoMa.py
robotevo/protocols/demos/tutorial_LL/: tutorial_LL.py
robotevo/protocols/evo100_f/: __init__.py  evo100_f.py
robotevo/protocols/evo100_f/PreKingFisher_RNAextNucleoMag_EtOH80p/: PreKingFisher_RNAextNucleoMag_EtOH80p.py
robotevo/protocols/evo100_f/Prefill_plates_LysisBuffer/: Prefill_plates_LysisBuffer.py  Prefill_plates_LysisBuffer_and_ProtKpreMix.py
robotevo/protocols/evo100_f/Prefill_plates_VEW1_ElutionBuffer_VEW2/: Prefill_plates_VEW1_ElutionBuffer_VEW2.py
robotevo/protocols/evo100_f/RNAextractionMN_Mag_Vet/: RNAextractionMN_Mag_Vet.py
robotevo/protocols/evo200_f/: __init__.py  evo200_f.py
robotevo/protocols/evo75_f/: __init__.py  evo75_f.py
robotevo/protocols/evo75_f/pcr/: pcr.py
